--- a/.gitignore
+++ b/.gitignore
@@ -67,7 +67,8 @@ docs/_build/
 target/
 
 # IPython Notebook
-.ipynb_checkpoints
+.ipynb_checkpoints/
+
 
 # pyenv
 .python-version
@@ -87,3 +88,4 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
